--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:type" content="Website" />
     <meta property="og:image" content="http://" />
     <meta property="og:url" content="https://vinishified.com" />
-    <title>Vinishidy - Go Online for jus $9</title>
+    <title>Vinichify - Go Online for jus $9</title>
   </head>
   <body>
     <header>
@@ -42,9 +42,9 @@
     <section class="block block--dark block--skewed-left hero">
       <div data-aos="fade-right" class="container grid grid--1x2">
         <header class="block__header hero__content">
-          <h1 class="block__heading">Clould Hosting for Pros</h1>
+          <h1 class="block__heading">Vinicius Di Renzo</h1>
           <p class="hero__tagline">
-            Deploy you Websites in less than 60 seconds.
+            Vinicius Vinicius Vinicius Vinicius Vinicius.
           </p>
           <a href="" class="btn btn--accent btn--stretched">GET STARTED</a>
         </header>
@@ -63,7 +63,7 @@
     </section>
     <section data-aos="zoom-in-up" class="block container block-domain">
       <header class="block__header">
-        <h2>Starting at $9 per Month</h2>
+        <h2>Vinicius at $9 per Month</h2>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit,
           distinctio!
@@ -74,7 +74,7 @@
         <button class="btn btn--accent">
           <svg class="icon icon--white">
             <use xlink:href="images/sprite.svg#search"></use></svg
-          >Search
+          >Vinicius
         </button>
       </div>
       <ul class="list block-domain__prices">
@@ -182,7 +182,7 @@
             type="image/jpg"
             srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x"
           />
-          <img class="feature__image" src="images/easy2x.jpg" alt="" />
+          <img class="feature__image" src="images/easy@2x.jpg" alt="" />
         </picture>
       </article>
       <article class="grid grid--1x2 feature">
@@ -209,7 +209,7 @@
             type="image/jpg"
             srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x"
           />
-          <img class="feature__image" src="images/fast2x.jpg" alt="" />
+          <img class="feature__image" src="images/fast@2x.jpg" alt="" />
         </picture>
       </article>
       <article class="grid grid--1x2 feature">
@@ -236,7 +236,7 @@
             type="image/jpg"
             srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x"
           />
-          <img class="feature__image" src="images/wordpress2x.jpg" alt="" />
+          <img class="feature__image" src="images/wordpress@2x.jpg" alt="" />
         </picture>
       </article>
       <article class="grid grid--1x2 feature">
@@ -263,7 +263,7 @@
             type="image/jpg"
             srcset="images/support.jpg 1x, images/support@2x.jpg 2x"
           />
-          <img class="feature__image" src="images/support2x.jpg" alt="" />
+          <img class="feature__image" src="images/support@2x.jpg" alt="" />
         </picture>
       </article>
     </section>
