from get to got.

--- a/Playground.html
+++ b/Playground.html
@@ -18,7 +18,7 @@
     <div class="callout callout--primary">
       <div class="grid grid--1x2">
         <div class="callout__content">
-          <h2 class="callout__heading">Ready to Get Started</h2>
+          <h2 class="callout__heading">Ready to got Started</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem enim
             saepe dolore vel cupiditate natus aut voluptas facere non hic.
