Update from C to S.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:type" content="Website" />
     <meta property="og:image" content="http://" />
     <meta property="og:url" content="https://vinishified.com" />
-    <title>Vinichify - Go Online for jus $10</title>
+    <title>Vinishify - Go Online for jus $10</title>
   </head>
   <body>
     <header>
@@ -70,7 +70,12 @@
         </p>
       </header>
       <div class="input-group">
-        <input type="text" class="input" placeholder="Enter domain name" />
+        <input
+          aria-label="domain"
+          type="text"
+          class="input"
+          placeholder="Enter domain name"
+        />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
             <use xlink:href="images/sprite.svg#search"></use></svg
